--- a/exam.html
+++ b/exam.html
@@ -8,7 +8,7 @@
           integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
           crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <link rel="stylesheet" href="style/doing-test-style.css">
+    <link rel="stylesheet" href="doing-test-style.css">
 </head>
 <body>
 
@@ -84,9 +84,9 @@
 
 </body>
 
-<script src="js/script.js"></script>
-<script src="js/common.js"></script>
-<script src="js/countdown.js"></script>
-<script src="js/doing-test-script.js"></script>
+<script src="script.js"></script>
+<script src="common.js"></script>
+<script src="countdown.js"></script>
+<script src="doing-test-script.js"></script>
 
 </html>
