--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <link rel="stylesheet" href="style/index-style.css">
+    <link rel="stylesheet" href="index-style.css">
 </head>
 <body>
 
@@ -47,7 +47,7 @@
     <div class="hero-body">
         <div class="container">
             <figure class="image center">
-                <img src="assets/logo.webp" alt="bulma logo" style="max-width: 256px;">
+                <img src="logo.webp" alt="bulma logo" style="max-width: 256px;">
             </figure>
         </div>
     </div>
@@ -135,7 +135,7 @@
     </div>
 </footer>
 
-<script src="js/script.js"></script>
+<script src="script.js"></script>
 
 </body>
 </html>
