--- a/question-form.html
+++ b/question-form.html
@@ -8,7 +8,7 @@
           integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
           crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <link rel="stylesheet" href="style/manage-question.css">
+    <link rel="stylesheet" href="manage-question.css">
 </head>
 <body>
 <div class="app-loading">
@@ -48,7 +48,7 @@
     <div class="hero-body">
         <div class="container">
             <figure class="image center">
-                <img title="Back to home" onclick="backToHome()" src="assets/logo.webp" alt="bulma logo" style="cursor: pointer; max-width: 196px;">
+                <img title="Back to home" onclick="backToHome()" src="logo.webp" alt="bulma logo" style="cursor: pointer; max-width: 196px;">
             </figure>
         </div>
     </div>
@@ -226,8 +226,8 @@
     </div>
 </div>
 
-<script src="js/script.js"></script>
-<script src="js/common.js"></script>
-<script src="js/manage-question.js"></script>
+<script src="script.js"></script>
+<script src="common.js"></script>
+<script src="manage-question.js"></script>
 </body>
 </html>
