--- a/question-form.html
+++ b/question-form.html
@@ -65,7 +65,7 @@
                             <label class="label">Nội dung câu hỏi</label>
                             <div class="control">
                                 <label>
-                                    <textarea class="textarea" name="question" type="text" placeholder="Nhập nội dung câu hỏi..."></textarea>
+                                    <textarea class="textarea" name="question" placeholder="Nhập nội dung câu hỏi..."></textarea>
                                 </label>
                             </div>
                         </div>
@@ -165,7 +165,7 @@
                 <label class="label">Nội dung câu hỏi</label>
                 <div class="control">
                     <label>
-                        <textarea id="iq_question" class="textarea" name="question" type="text" placeholder="Nhập nội dung câu hỏi..."></textarea>
+                        <textarea id="iq_question" class="textarea" name="question" placeholder="Nhập nội dung câu hỏi..."></textarea>
                     </label>
                 </div>
             </div>
