Add Navbar menu

--- a/exam.html
+++ b/exam.html
@@ -45,6 +45,18 @@
     </div>
 </div>
 
+<input class="input-menu" type="checkbox" id="active">
+<label for="active" class="menu-btn"><span></span></label>
+<label for="active" class="close-menu"></label>
+<div class="wrapper">
+    <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/exam">Làm bài kiểm tra</a></li>
+        <li><a href="/question-form">Quản lí câu hỏi</a></li>
+        <li><a href="#">Thống kê</a></li>
+    </ul>
+</div>
+
 <section class="main-content">
     <div class="container">
         <div class="section">
