--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@
 </head>
 <body>
 
+<input class="input-menu" type="checkbox" id="active">
+<label for="active" class="menu-btn"><span></span></label>
+<label for="active" class="close-menu"></label>
+<div class="wrapper">
+    <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/exam">Làm bài kiểm tra</a></li>
+        <li><a href="/question-form">Quản lí câu hỏi</a></li>
+        <li><a href="#">Thống kê</a></li>
+    </ul>
+</div>
+
 <div class="app-loading">
     <div class="cat-run"></div>
 </div>
