--- a/question-form.html
+++ b/question-form.html
@@ -44,7 +44,17 @@
         <div id="mars"></div>
     </div>
 </div>
-
+<input class="input-menu" type="checkbox" id="active">
+<label for="active" class="menu-btn"><span></span></label>
+<label for="active" class="close-menu"></label>
+<div class="wrapper">
+    <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/exam">Làm bài kiểm tra</a></li>
+        <li><a href="/question-form">Quản lí câu hỏi</a></li>
+        <li><a href="#">Thống kê</a></li>
+    </ul>
+</div>
 <section class="hero">
     <div class="hero-body">
         <div class="container">
