Soft the move of navbar

--- a/question-form.html
+++ b/question-form.html
@@ -162,7 +162,7 @@
                             <a onclick="filterQuestionsByType('1')" title="Hệ thống chính trị, tổ chức bộ máy của Đảng, Nhà nước, các tổ chức chính trị-xã hội">Chuyên đề 1</a>
                             <a onclick="filterQuestionsByType('2')" title="Quản lý hành chính nhà nước">Chuyên đề 2</a>
                             <a onclick="filterQuestionsByType('3')" title="Công chức, công vụ">Chuyên đề 3</a>
-                            <div class="animation start-home"></div>
+                            <div class="animation start-1"></div>
                         </nav>
                     </div>
                     <div id="all_question_content" class="app-section custom-scrollbar">
