Update change get random question algo

--- a/exam.html
+++ b/exam.html
@@ -114,7 +114,7 @@
     <div class="modal-background"></div>
     <div class="modal-card">
         <header class="modal-card-head">
-            <p class="modal-card-title center has-text-weight-bold">Điểm số của bạn</p>
+            <p class="modal-card-title center has-text-weight-bold">Kết quả của bạn</p>
         </header>
         <section class="modal-card-body">
             <p id="result_point" class="result-point"></p>
