Update: Add search question

--- a/question-form.html
+++ b/question-form.html
@@ -157,6 +157,14 @@
             <div class="column">
                 <div class="section px-3 mx-auto" style="max-width: 100%;">
                     <h1 class="title center is-justify-content-center">Câu hỏi hiện có</h1>
+                    <div class="my-search">
+                        <form action="">
+                            <label>
+                                <input id="in_search_question" type="search" required placeholder="Nhập từ khóa ....">
+                            </label>
+                            <i class="fa fa-search"></i>
+                        </form>
+                    </div>
                     <div class="navbar-test">
                         <nav class="is-family-monospace">
                             <a onclick="filterQuestionsByType('1')" title="Hệ thống chính trị, tổ chức bộ máy của Đảng, Nhà nước, các tổ chức chính trị-xã hội">Chuyên đề 1</a>
